13.12.2002	<mschimek@users.sf.net>

	* glade/zapping.glade, src/v4linterface.c, src/v4linterface.h,
	  plugins/mpeg/mpeg.c: Added video standard inquiry if not
	  reported by driver.

12.12.2002	<mschimek@users.sf.net>

	* plugins/mpeg/mpeg.c (video_callback): Unusual condition can
	  block encoding, added temp fix to abort after stop.
	(on_saving_configure_clicked, saving_dialog_attach_formats):
	  GUI confusion fix, saving dialog now automatically selects
	  last configured format. 
	(select_file_format): preliminary visual hint, mp1e vcd image
	  size is not variable.
	(do_start): Retry request_bundle_format() with codec video
	  parameters.
	* src/callbacks.c, src/osd.c, src/ttxview.c, src/zvbi.h,
	  src/zvbi.c: Corrected wrong type of zvbi_page, zvbi_subpage
	  for libzvbi 0.3.
	* zapping.desktop: Italian translation from po/it.po.

30.10.2002	Italian translation <garetxe@users.sf.net>

	* it.po: Italian translation, contributed by Pino Toscano.

21.10.2002	<mschimek@users.sf.net>

	* src/zvbi.c (threads_init): g_strconcat() fix re #635976.
	* src/gen_conv.s: Replaced /**/ remarks, old as don't like it.

04.10.2002	<mschimek@users.sf.net>

	* Release 0.6.5.

01.10.2002	<mschimek@users.sf.net>

	* po/nl.po: Updated by Guus Bonnema.

29.09.2002	<mschimek@users.sf.net>

	* src: #include fixes for GCC 2.7 (as if anyone would
	  still use it...)
	* Makefile.am: Added missing DISTCLEANFILES.
	* zapping_setup_fb/Makefile.am: Added missing DISTCLEANFILES.
	* src/Makefile.am (COMMON_LIB): Changed to $(top_builddir).

28.09.2002	<mschimek@users.sf.net>

	* po/fr.po: Updated by Christan Marillat.

27.09.2002	<mschimek@users.sf.net>

	* plugins/mpeg/mpeg.c: Proper setup of quickrec recording window.

26.09.2002	<mschimek@users.sf.net>

	* src/ttxview.c, plugins/mpeg/mpeg.c: Changed gettext() calls to
	  dgettext() where they access library strings. Oops.

24.09.2002	<mschimek@users.sf.net>

	* configure.in: Change rte 0.5 check to match latest revision.