@@ -1,31 +1,56 @@
 Iñaki García Etxebarria <garetxe@users.sourceforge.net>
 
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v1.0.6 (GNU/Linux)
+Comment: For info see http://www.gnupg.org
+
+mQGiBD2XPugRBAD+XjKGe0Nks35boWJNc4ouoXd8kvpCAgb+9KK+yDRMtwkX3gx6
+Sjwy3STJ4t5PWEvms4yulsICUnJGGDEMZVHbNoWdAKStSGy9/jKHOcH2esVP6qt5
+wvd0ITeS/ZLumZTxc8XqhW4KOvUhle8KkzEubrB6MFv6xGQ/wiN+3DXP/wCgrfbr
+tr+lmHLsPytAHRCBKVjC+R8D/0d2enQ/Aj0Br5Bh2m+X2a8/OAzisIisKOEM+oQi
+GbPyIxnvLTwDT9oBEYHBrU0xuJ2UmgixsaDWH7QTGcUD495KGH8PuAvrDFgQBENV
+DDxVJLSSBwB+/eb4oCoIVdIgQ36Gc4yeaFKT4xbHJkV7Co1sEJ/+Qlfck8CX3QAO
+fRksBADim1EH9To+LGlC5Z9T9+Ic4b7pSuJWFRfsyD8HIcuKGh5lg5bxJna836hP
+1KhvWAaSBedoHfSn+FY8lOfqHwxEHcF1fWGtWzgX7H2vqzEKjVW1lWW+BWCo7+j9
+2lQ6HpuAL/doc69YNiMRE1YIcaijmqm89sAp4PLpchyWtcuX1rQrScOxYWtpIEdh
+cmPDrWEgRXR4ZWJhcnJpYSA8Z2FyZXR4ZUBnbXgubmV0PohXBBMRAgAXBQI9lz7o
+BQsHCgMEAxUDAgMWAgECF4AACgkQF0Bm+G3HG/2GyQCffKIZlsvQcD+ny9a5cbR5
+xWzTzokAoJkGxq0R0PGgRdfA8DH28UhJ26iCuQENBD2XPusQBAC97oqKo+v6bIrl
+won6CtLSuCcgm6XHY/rOEpTqbwckz5MiM23kisP8uc4mq1xqA84K8JcUu60LLCuy
+w7EmyAg9CSjN0MdACLPeMjmSP29afgwDjSNDVpeJ9MyNFWxF67OtOu955hzxK0Kt
+6bjR4CeXDAhJBtoUfDrMrmmfOylA0wADBQP+L7f96E9zfK01WceOPwsQG7i493Qu
+CDSniRGdMKz9mjxIHBy2l8zZ8EDwHil2AEadyLHM9iWPt1t0ijN+Gy+7wfhuTxsM
+3axt7kBQvPHeuKj1hKIJt8oLLd2r7dRFV4gY13wpQSYy6j/NsWu/7/Pf5Jwn5fIo
+BjTw2/12aBGeDeeIRgQYEQIABgUCPZc+6wAKCRAXQGb4bccb/U6cAJ9w+wem13KY
+BcX0Bl723wDsv2co4gCeOsGzFWIojZ28HoeKLuhRabFkvRM=
+=pU7d
+-----END PGP PUBLIC KEY BLOCK-----
+
 Michael H. Schimek <mschimek@users.sourceforge.net>
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: GnuPG v1.0.7 (GNU/Linux)
 
-mQGiBDzffbgRBACxEdEZLlDkzbsL8dHJ7x6v3353UbOgUdtxu7ypbW+v3PlpvE7M
-ybdPevvjbGuKpD89g+ZBKRzQKyUL/AEcGzeUKabkH3+6Nlc9Iz0IgSEewmvIWuEU
-S0XtQDz501DN7QuwE/JB4wFrt8DN3sk2bVUAWhXluxAP2kpbzroEc+D8jwCggW43
-zoqbcynKF+tMtXnetY6lG4sD/jowgFRZ2M1Nz+tATU/Yhdt0nvGbbjbFJVrO64CL
-ut+P6nnMI0VlkXUEl/FMA1LUtx8JUnGggyH+7kSslwgdWM85nO5K5hoFnkcsZl1u
-qS861ZMj0mOK6xB0J2IMCL5Tc78N3KEjtAz8BsktwXeJkllgABxaWx89AhsWe6id
-TOlgBACJnRGtdQsM+gHBsdQlt3PWvhZ+z6hrD13el0Xpza4xmR1v/6mBoIjJY1oP
-5I4vMqQdQZ4L7KGXefgesEzBU3igRiR+r+H5g6RiDWUZPZPHoRt07Y+EyY4NgfnR
-LcuP+/VyhoZ6yTTb0xdPyacfxbp7110Ga7S5sb5szWsESFRXd7QzTWljaGFlbCBI
-LiBTY2hpbWVrIDxtc2NoaW1la0B1c2Vycy5zb3VyY2Vmb3JnZS5uZXQ+iF8EExEC
-AB8FAjzffbgFCQDtTgAECwcDAgMVAgMDFgIBAh4BAheAAAoJELKntReBOPEdsRQA
-niY9ZvCg0zVMaC8CRhhT77CGeH8zAJ9dw6R33mks8yJuNOy/mGpd2Qkn7LkBDQQ8
-333FEAQA5v1mSaU67QCKm7694NDOkA5KReDK9Oi9J+xGXlulPQLk6O3Cm/NH4fx9
-NtaET1f3GPVQT/YM0lAfQqfvZe+qTkOfuSlzcRB1yT1Y9aQKR2eOxT00AxgQcuBF
-tKL3bVsjgV3X7HWqN/Akau8KGvUfGVWDnfrIKTrUSxNu780pO6sAAwUEALaqkBjs
-WrcjC5g8WXLD9TKg0/9SOcurecy53wPi5kk1wQskJA+HQs9Jq74hNV/xTR+u286g
-a8DmkFpBqczjwpLuK7IRTV9aah79l+RtxqEChIMA33VIQZRsFBynswaSe/IZye09
-WG7Jf4TskThhmLz4g+EbbQbQpkBI3SRpTnmwiEwEGBECAAwFAjzffcUFCQDtTgAA
-CgkQsqe1F4E48R0yWQCbBjzosU16TVDqbvhF4kCDjLm01w8AnjsI4gRSuptJ++85
-8ZQo/xWXA1jI
-=bp9A
+mQGiBD37IFERBAD0O7OMo2FYlaZLZW2/Se6h2Tnw3YiqRYrg4H/BXMB0hWjd4Zvs
+6DIXXoMVfMrmP3/y7JT2F9J+V48S/9Z8JmyPCpu3+0lhDWmOdypkJ1YMxSB8ntOk
+jX79yZhTuPyRV0/ylJizE7sKzSDU/EdEvOnwrHD/Sq+5vOmj1OAPFZgCIwCglTcw
+fn30Z/kcKNWHstOf36aKG/kEAMUyuM041x/zUDWDPwDxD4XZVEcInwwuB859vqx+
+1GcQB0ySGC1bKMmjZzGnbYJXdCeUPm8AwRaO/c3AiAZrKpWeQX85toroNZdsaw9l
+CxawPCb1NNc9N1G4IIcjeNnNytoj402FMn/JPP/NhL7OIZ5pJyJ/LvxQ7UFozbDT
+sTsgA/4r9f9M0XTJl5iA3sMO3vS9Rlsl5ymV5jszYm2dRm+FHB4R1vFaHQ1h3gaH
+HTaSZyYm9ZumaybMeTr/QPmaF6RtutJVxrIl1ZX42HRaYIeX4CDtdWxOmGN7upon
+ZzQTE+UqZyTDnvF6fefJVyBJTl5CLP+WcLTQHCgKWLHjFJaWsrQzTWljaGFlbCBI
+LiBTY2hpbWVrIDxtc2NoaW1la0B1c2Vycy5zb3VyY2Vmb3JnZS5uZXQ+iFkEExEC
+ABkFAj37IFEECwcDAgMVAgMDFgIBAh4BAheAAAoJEC7lEHu9dNho1wMAnR35l+pg
+yBmdzYI5j9Esna+gozpkAKCCjYqjiMtb54qtNuo5jXRDb62apLkBDQQ9+yBfEAQA
+kea1haOdrwx8eEfSQ1gbEci2/w90UaINAC/LtQJBSyYSe6keCyXD2FpHt7Vmhl0S
+sOn3BoKjKZrDYLCYPAINziOIxLToXgtd3MZWgpPZTFQay7ZTJlvx3R7k1Kmb53vX
+pluEQchPe4xR619OumLXUrVxpbD6Q9d3ktFKyIAe83sAAwYD+wYeymullsVcpIJ9
+UcKcWzQ56wSv3iwFTI9HNgzYfa5Z1Efb40Ro1za6uq/XQqxq7uCYNNI3rOoH5lLB
+IxIcG5Uxy2ARPUksWa956KLg07I4cm+ihkLteN7dLLtTxcVhiHJFCoprhTJT8SMM
+xfhbbLEwBC1+SeyyQy4gYxTzK4N0iEYEGBECAAYFAj37IF8ACgkQLuUQe7102GhA
+CACeMkBxKvu59js7H+T+s6Z23uEPUDoAoJCRRWwibRau+hAQz6JWOxUl9NJJ
+=PQod
 -----END PGP PUBLIC KEY BLOCK-----
 
 Local Variables:
